<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help" />
    <item
        android:id="@+id/action_show_functions"
        android:title="@string/action_show_functions" />

    <item
        android:id="@+id/action_show_calc_step"
        android:title="@string/action_show_calc_step" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit" />

    <item
        android:id="@+id/action_choose_mode"
        android:icon="@drawable/ic_mode"
        android:orderInCategory="90"
        android:title="@string/action_choose_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_custom_input"
        android:icon="@drawable/ic_custom_white"
        android:orderInCategory="90"
        android:title="@string/title_custom_input"
        app:showAsAction="ifRoom" />

</menu>