<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_white_bg"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="25dp"
        android:paddingEnd="20dp"
        android:paddingBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_choose_mode"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_mode_normal"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/text_mode_normal" />

        <Button
            android:id="@+id/btn_mode_expanded"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/text_mode_expand" />

        <Button
            android:id="@+id/btn_mode_programmer"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/text_mode_programmer" />

        <Button
            android:id="@+id/btn_mode_date_calc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/text_mode_date_calc" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/action_cancel"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>