<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/view_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        android:paddingTop="16dp"
        android:paddingEnd="22dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/text_start_date" />

        <Button
            android:id="@+id/btn_start_date"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_pad_number_last_s"
            android:text="@string/text_please_choose_date" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingTop="22dp"
        android:paddingEnd="15dp">

        <RadioButton
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_add" />

        <RadioButton
            android:id="@+id/radio_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_sub" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_pad_number"
            android:padding="0dp"
            android:text="@string/text_clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <EditText
            android:id="@+id/edit_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/text_year" />

        <EditText
            android:id="@+id/edit_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/text_month" />

        <EditText
            android:id="@+id/edit_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:maxLines="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0"
            android:text="@string/text_day" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="22dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/view_result_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/text_result_date" />

        <com.dreamfish.com.autocalc.widgets.AutofitTextView
            android:id="@+id/text_result_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_please_choose"
            android:textAlignment="textEnd"
            android:textColor="@color/cal_result"
            android:textSize="30sp"
            android:textStyle="bold"
            android:singleLine="true"
            app:sizeToFit="true"
            app:minTextSize="12sp" />

    </LinearLayout>
</LinearLayout>